Fix website's background color on Firefox

--- a/_source/_assets/css/base/_elements.scss
+++ b/_source/_assets/css/base/_elements.scss
@@ -13,6 +13,7 @@ body {
   padding: 0;
   position: relative;
   overflow-x: hidden;
+  background-color: $color-white;
   color: $color-black;
   font-family: $serif-stack;
   font-size: $font-base-small;
